[package]
name = "rs_dn"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
reqwest = { version = "0.12.12", features = ["default", "h2", "native-tls-alpn"] }
regex = "1.11.1"
lazy_static = "1.5.0"
bytes = "1.10.0"
futures = "0.3.31"
md-5 = "0.10.6"
rand = "0.9.0"
quinn = { version = "0.11", features = ["ring"] }
h3-quinn = "0.0.7"
h3 = "0.0.6"
http = "1.2.0"
url = "2.5.4"
rustls = "0.23.23"
rustls-native-certs = "0.8.1"
