[package]
name = "rs_dn"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
regex = "1.11.1"
lazy_static = "1.5.0"
bytes = "1.10.0"
futures = "0.3.31"
md-5 = "0.10.6"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["default", "h2", "native-tls-alpn"] }
tokio-quiche = "0.2.1"
url = "2.5.4"
hickory-resolver = "0.24.4"