[package]
name = "rs_dn"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
regex = "1.11.1"
futures = "0.3.31"
md-5 = "0.10.6"
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["default", "h2", "native-tls-alpn"] }


# h3
lazy_static = { version = "1.5.0", optional = true }
bytes = { version = "1.10.1", optional = true }
tokio-quiche = { version = "0.2.1", optional = true}
url = { version = "2.5.4", optional = true }
hickory-resolver = { version = "0.24.4", optional = true }

[features]
h3 = ["url", "hickory-resolver", "tokio-quiche", "bytes", "lazy_static"]